social media icon overlap issue fixed in mobile screen

--- a/style.css
+++ b/style.css
@@ -459,3 +459,14 @@ body{
         right: -60px;
        }
 }
+@media screen and (max-width: 400px){
+    .big-img{
+        height: 600px;
+    }
+    .social{
+        position: absolute;
+        top: 12%;
+        gap: 60px;
+        left: 5%;
+    }
+}
